--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'android-apt'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
+    dataBinding {
+        enabled = true
+    }
 
     defaultConfig {
         applicationId "com.codepath.flickster"
